--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -17,5 +17,6 @@
     padding-top: 20px;
     padding-bottom: 56px;
     row-gap: 56px;
+    margin-top: 0;
   }
 }
