--- a/blocks/page.css
+++ b/blocks/page.css
@@ -10,4 +10,7 @@
 }
 
 @media screen and (max-width: 627px) {
+  .page__section {
+    max-width: 90%;
+  }
 }
